--- a/services.html
+++ b/services.html
@@ -54,12 +54,12 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-third 3-wide w3-margin-bottom serviceElement">
-		<img src="data_management.jpg" class="image1" style="width:100%">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
 			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.</p>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-large">Question about Data Management? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Management? Contact Us</a>
 		</div>
 	</div>
 	<b></b>
