--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@ body {font-family: "Lato", sans-serif}
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
 		
 		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img src="process_mapping.jpg" style="width:100%">
+		<img class="image1" src="process_mapping.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Process Improvement</b></p>
 			<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
@@ -50,7 +50,7 @@ body {font-family: "Lato", sans-serif}
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img src="custom_software.jpg" style="width:100%">
+		<img class="image1" src="custom_software.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
 			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img src="data_management.jpg" style="width:100%">
+		<img class="image1" src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Management</b></p>
 			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.
