--- a/services.html
+++ b/services.html
@@ -64,11 +64,31 @@ body {font-family: "Lato", sans-serif}
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
-			<p><b>Data Management</b></p>
+			<p><b>Data Handling</b></p>
 			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.
 			</p>
 
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Management? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
+		</div>
+	</div>
+	<br></br>
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img class="image1" src="supply_chain.jpg" style="width:100%">
+		<div class="w3-container w3-white">
+			<p><b>Logistics and Supply Chain</b></p>
+			<p class="w3-opacity">Customer fulfillment, shipping, distributors, and suppliers can all be difficult to deal with. We can help get you better prices and be more efficient by handling any aspects of supply chain or logistics within your business.
+			</p>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
+		</div>
+	</div>
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img class="image1" src="document_management.jpg" style="width:100%">
+		<div class="w3-container w3-white">
+			<p><b>Document Management</b></p>
+			<p class="w3-opacity">From turning your hard copies to digital, to organizing and streamlining your document and communication flow, we can help a variety of different ways.
+			</p>
+			<br></br>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
 	<b></b>
