--- a/services.html
+++ b/services.html
@@ -71,8 +71,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 		</div>
 	</div>
-	<br></br>
-	<div class="w3-container w3-half w3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Logistics and Supply Chain</b></p>
@@ -81,8 +80,8 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-half w3-wide w3-margin-bottom serviceElement">
-		<img class="image1" src="document_management.jpg" style="width:100%">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img class="image1" src="document-management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Document Management</b></p>
 			<p class="w3-opacity">From turning your hard copies to digital, to organizing and streamlining your document and communication flow, we can help a variety of different ways.
