--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {font-family: "Lato", sans-serif}
@@ -39,12 +40,12 @@ body {font-family: "Lato", sans-serif}
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
 		
 		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img class="image1" src="process_mapping.jpg" style="width:100%">
-		<div class="w3-container w3-white">
-			<p><b>Process Improvement</b></p>
-			<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
-			<br>
-		</br>
+			<img class="image1" src="process_mapping.jpg" style="width:100%">
+			<div class="w3-container w3-white">
+				<p><b>Process Improvement</b></p>
+				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+				<br>
+			</br>
 
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
@@ -57,21 +58,22 @@ body {font-family: "Lato", sans-serif}
 			<br>
 		</br>
 		<br>
-		</br>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
-		</div>
-	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
-		<img class="image1" src="data_management.jpg" style="width:100%">
-		<div class="w3-container w3-white">
-			<p><b>Data Handling</b></p>
-			<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.
-			</p>
+	</br>
+	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
+</div>
+</div>
+<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<img class="image1" src="data_management.jpg" style="width:100%">
+	<div class="w3-container w3-white">
+		<p><b>Data Handling</b></p>
+		<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.
+		</p>
 
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
-		</div>
+		<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+</div>
+<div class="row">
+	<div class="float-right col-sm-6 w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Logistics and Supply Chain</b></p>
@@ -80,7 +82,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="float-left col-sm-6 w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="document-management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Document Management</b></p>
@@ -90,7 +92,8 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<b></b>
+</div>
+<b></b>
      <!--
         <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
         <h2 class="w3-wide w3-center">Contact</h2>
