--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@ body {font-family: "Lato", sans-serif}
 	</div>
 </div>
 <div class="row">
-	<div class="float-right col-sm-6 w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="float-right col-sm-6">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Logistics and Supply Chain</b></p>
@@ -82,7 +82,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<div class="float-left col-sm-6 w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="float-left col-sm-6">
 		<img class="image1" src="document-management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Document Management</b></p>
