--- a/services.html
+++ b/services.html
@@ -73,16 +73,18 @@ body {font-family: "Lato", sans-serif}
 	</div>
 </div>
 <div class="row">
-	<div class="float-right col-sm-6">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
+		<div class="w3-container w3-white">
 			<p><b>Logistics and Supply Chain</b></p>
 			<p class="w3-opacity">Customer fulfillment, shipping, distributors, and suppliers can all be difficult to deal with. We can help get you better prices and be more efficient by handling any aspects of supply chain or logistics within your business.
 			</p>
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<div class="float-left col-sm-6">
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="document-management.jpg" style="width:100%">
+		<div class="w3-container w3-white">
 			<p><b>Document Management</b></p>
 			<p class="w3-opacity">From turning your hard copies to digital, to organizing and streamlining your document and communication flow, we can help a variety of different ways.
 			</p>
