--- a/services.html
+++ b/services.html
@@ -72,6 +72,45 @@ body {font-family: "Lato", sans-serif}
 		<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 	</div>
 </div>
+<div class="w3-black" id="services">
+	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
+		<h2 class="w3-wide">Services</h2>
+		<p class="w3-center">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
+		<b>  <h2 class="w3-wide">Core Services</h2></b>
+		
+		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+			<img class="image1" src="process_mapping.jpg" style="width:100%">
+			<div class="w3-container w3-white">
+				<p><b>Process Improvement</b></p>
+				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
+				<br>
+			</br>
+
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
+		</div>
+	</div>
+	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<img class="image1" src="custom_software.jpg" style="width:100%">
+		<div class="w3-container w3-white">
+			<p><b>Custom Software</b></p>
+			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
+			<br>
+		</br>
+		<br>
+	</br>
+	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
+</div>
+</div>
+<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<img class="image1" src="data_management.jpg" style="width:100%">
+	<div class="w3-container w3-white">
+		<p><b>Data Handling</b></p>
+		<p class="w3-opacity">We pride ourselves in the manipulation and visualization of data both big and small. We generate powerful, actionable insights from data you collect, and we work with you to set up channels to collect what data you don't have quite yet.
+		</p>
+
+		<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
+	</div>
+</div>
 <div class="row">
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
