--- a/services.html
+++ b/services.html
@@ -72,6 +72,12 @@ body {font-family: "Lato", sans-serif}
 		<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 	</div>
 </div>
+<div class="w3-black" id="services">
+	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
+		<h2 class="w3-wide"></h2>
+		<p class="w3-center"></p>
+		<b>  <h2 class="w3-wide">Core Services</h2></b>
+		
 		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 			<img class="image1" src="process_mapping.jpg" style="width:100%">
 			<div class="w3-container w3-white">
