--- a/services.html
+++ b/services.html
@@ -62,10 +62,17 @@ body {font-family: "Lato", sans-serif}
 	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 </div>
 </div>
+\img class="image1" src="data_management.jpg" style="width:100%">
+		<div class="w3-container w3-white">
+			<p><b>Data Handling</b></p>
+			<p class="w3-opacity">From collecting data to visualization, we can unearth unimaginable insights that will lead to better decision making and more efficient business strategies.
+			</p>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
+		</div>
+	</div>
 <div class="w3-black">
 	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">___________________________________________________________</h2>
-		<p class="w3-center">___________________________________________________________</p>
 <div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
 		<div class="w3-container w3-white">
