--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
 	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 </div>
 </div>
-\img class="image1" src="data_management.jpg" style="width:100%">
+<img class="image1" src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Handling</b></p>
 			<p class="w3-opacity">From collecting data to visualization, we can unearth unimaginable insights that will lead to better decision making and more efficient business strategies.
