--- a/services.html
+++ b/services.html
@@ -62,6 +62,7 @@ body {font-family: "Lato", sans-serif}
 	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 </div>
 </div>
+<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 <img class="image1" src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Handling</b></p>
