--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@ body {font-family: "Lato", sans-serif}
 			<p class="w3-opacity">From turning your hard copies to digital, to organizing and streamlining your document and communication flow, we can help a variety of different ways.
 			</p>
 			<br></br>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Document Management? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
@@ -96,7 +96,7 @@ body {font-family: "Lato", sans-serif}
 			<p><b>More Services Coming!</b></p>
 			<p class="w3-opacity">We at RGB Consulting Group pride ourselves in the idea of growth. We are always adding new services to our consulting repertoire, so if you have a suggestion or need, less us know (we may be already working on it)!
 			</p>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about future services? Contact Us</a>
 		</div>
 	</div>
      <!--
