--- a/services.html
+++ b/services.html
@@ -96,7 +96,7 @@ body {font-family: "Lato", sans-serif}
 			<p><b>More Services Coming!</b></p>
 			<p class="w3-opacity">We at RGB Consulting Group pride ourselves in the idea of growth. We are always adding new services to our consulting repertoire, so if you have a suggestion or need, less us know (we may be already working on it)!
 			</p>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about future services? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Future Services? Contact Us</a>
 		</div>
 	</div>
      <!--
