--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@ body {font-family: "Lato", sans-serif}
 			<p class="w3-opacity">From collecting data to visualization, we can unearth unimaginable insights that will lead to better decision making and more efficient business strategies.
 			</p>
 			<br></br>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 		</div>
 	</div>
 <div class="w3-black">
