--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@ body {font-family: "Lato", sans-serif}
 
 	<!-- Navbar -->
 	<div class="w3-top">
-		<div class="w3-bar w3-black w3-card">
+		<div class="w3-bar w3-white w3-card">
 			<a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
 			<a href="./home" class="w3-bar-item w3-button w3-padding-large">Home</a>
 			<a href="/#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
@@ -33,7 +33,7 @@ body {font-family: "Lato", sans-serif}
         <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
     </div>
 </div>
-<div class="w3-black" id="services">
+<div class="w3-white" id="services">
 	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">Services</h2>
 		<p class="w3-center">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
@@ -45,7 +45,7 @@ body {font-family: "Lato", sans-serif}
 				<p><b>Process Improvement</b></p>
 				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
 
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button ">Question about Process Improvement? Contact Us</a>
+			<a href="#contact" class="button" class="w3-bar-item w3-white w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
