--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 <!-- Navbar -->
 <div class="w3-top">
-    <div class="w3-bar w3-black w3-card">
+    <div class="w3-bar w3-white w3-card">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="/home" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
@@ -33,7 +33,7 @@
 </div>
 
 <!-- Navbar on small screens -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large">People</a>
     <a href="#services" class="w3-bar-item w3-button w3-padding-large">Services</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
@@ -71,7 +71,7 @@
     </div> -->
 
     <!-- The Band Section -->
-    <div class="w3-black" id="missionstatement">
+    <div class="w3-white" id="missionstatement">
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
         <h2 class="w3-wide">Mission Statement</h2>
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
