--- a/services.html
+++ b/services.html
@@ -34,12 +34,12 @@ body {font-family: "Lato", sans-serif}
     </div>
 </div>
 <div class="w3-white" id="services">
-	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
+	<div class="w3-container w3-content w3-white w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">Services</h2>
 		<p class="w3-center">Below are what we consider to be our core services. These are our bread and butter and we know them thoroughly. In addition to what is below, we have a wide-spread network from marketers to economists. So feel free to reach out if you simply need a connection!</p>
 		<b>  <h2 class="w3-wide">Core Services</h2></b>
 		
-		<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+		<div class="w3-container w3-third w3-wide w3-white w3-margin-bottom serviceElement">
 			<img class="image1" src="process_mapping.jpg" style="width:100%">
 			<div class="w3-container w3-white">
 				<p><b>Process Improvement</b></p>
@@ -58,7 +58,7 @@ body {font-family: "Lato", sans-serif}
 	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 </div>
 </div>
-<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+<div class="w3-container w3-third w3-wide w3-white w3-margin-bottom serviceElement">
 <img class="image1" src="data_management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Data Handling</b></p>
@@ -80,7 +80,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third w3-white w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="document-management.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Document Management</b></p>
@@ -90,7 +90,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Document Management? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third w3-white w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="whats_next.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>More Services Coming!</b></p>
