--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 
     <!-- The Band Section -->
     <div class="w3-white" id="missionstatement">
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
+    <div class="w3-container w3-content w3-white w3-center w3-padding-64" style="max-width:800px">
         <h2 class="w3-wide">Mission Statement</h2>
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
         <div class="w3-row w3-padding-32">
