--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ body {font-family: "Lato", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-white w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
 	</div>
-	<div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
+	<div class="w3-container w3-third w3-wide w3-white w3-margin-bottom serviceElement">
 		<img class="image1" src="custom_software.jpg" style="width:100%">
 		<div class="w3-container w3-white">
 			<p><b>Custom Software</b></p>
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
 		</div>
 	</div>
 <div class="w3-black">
-	<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px">
+	<div class="w3-container w3-content w3-white w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">___________________________________________________________</h2>
 <div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
 		<img class="image1" src="supply_chain.jpg" style="width:100%">
