--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {font-family: "Times New Roman", sans-serif}
+body {font-family: "Courier", sans-serif}
 .mySlides {display: none}
 </style>
 <body>
@@ -68,7 +68,7 @@ body {font-family: "Times New Roman", sans-serif}
 			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 		</div>
 	</div>
-<div class="w3-black">
+<div class="w3-white">
 	<div class="w3-container w3-content w3-white w3-center w3-padding-64" style="max-width:1000px">
 		<h2 class="w3-wide">___________________________________________________________</h2>
 <div class="w3-container w3-third w3-wide w3-margin-bottom serviceElement">
