--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {font-family: "Courier", sans-serif}
+body {font-family: "Trebuchet MS", sans-serif}
 .mySlides {display: none}
 </style>
 <body>
