--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-    body {font-family: "TCourier", sans-serif}
+    body {font-family: "Trebuchet MS", sans-serif}
     .mySlides {display: none}
 </style>
 <body>
