--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class="w3-justify">Our mission is to provide innovative, modern, and impactful consulting services to meet our client needs. Through clear communication, data, and analytics we strive to find what within your business could be better. Our unique lens will provide high quality insights in order to save you money, make your business more efficient, and most importantly, make each one of our client’s work lives that much better.</p>
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
-                <p>Roberto Rojas</p>
+                <b><p>Roberto Rojas</p></b>
                 <b>Founder, Principal Consultant </b>
                 <b> <br><a href="https://www.linkedin.com/in/robertojrojas/?lipi=urn%3Ali%3Apage%3Ad_flagship3_search_srp_top%3BMrphaPSRRCesmozDyzTE5Q%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_search_srp_top-search_srp_result&lici=LoGL8jYJT2aUkiXFijhdTA%3D%3D.asp" target="_blank">Linkedin</a></br></i>
             </div>
