--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         <a href="/home" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+        <a href="./contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
