--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="/home" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+        <a href="./contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -35,17 +35,24 @@
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large">People</a>
-    <a href="#services" class="w3-bar-item w3-button w3-padding-large">Services</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
+    <a href="./services" class="w3-bar-item w3-button w3-padding-large">Services</a>
+    <a href="./contactus" class="w3-bar-item w3-button w3-padding-large">Contact</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">About Us!!!</a>
 </div>
 
 <!-- Page content -->
+<div class="introduction" >
+    <div class="relative">
+        <div class="w3-container w3-content w3-white w3-center w3-padding-64" style="max-width:800px">RGB Consulting Group is an industrial engineering and data management consulting firm concentrated on increasing effectiveness and process improvement through a variety methods. Our initiative is focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure actionable solutions are developed.
+        </div>
+    </div>
+</div>
+
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
-<div class="relative">
+
         <img src="roundtableart1.jpg" style="width:100%">
     </div>
 </div>
