--- a/contactus.html
+++ b/contactus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Let Us, Help You</title>
+<title>Solutions that Make a Difference</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,7 +19,7 @@
         <a href="/home" class="w3-bar-item w3-button w3-padding-large">Home</a>
         <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
         <a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+        <a href="/contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact Us</a>
         <div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -36,6 +36,21 @@
 <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="#missionstatement" class="w3-bar-item w3-button w3-padding-large">People</a>
     <a href="#services" class="w3-bar-item w3-button w3-padding-large">Services</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
+    <a href="./contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">About Us!!!</a>
 </div>
+ <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
+        <h2 class="w3-wide w3-margin-left">Contact Us</h2>
+        <p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? </i></p>
+        <div class="w3-row w3-padding-32">
+            <div class="w3-col m6 w3-large w3-margin-bottom">
+                <i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
+                <i class="fa fa-map-marker" style="width:30px"></i>
+                San Jose, CR<br>
+                <i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
+                <i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: <br>rrojas@rgbconsultinggroup.com<br>
+            </div>
+
+</body>
+</html>
