--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<a href="./home" class="w3-bar-item w3-button w3-padding-large">Home</a>
 			<a href="/#missionstatement" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Mission Statement</a>
 			<a href="./services.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Services</a>
-			<a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
+			<a href="./contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
 			<div class="w3-dropdown-hover w3-hide-small">
           <!--   <button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>
             <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -45,7 +45,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 				<p><b>Process Improvement</b></p>
 				<p class="w3-opacity">We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
 
-			<a href="#contact" class="button" class="w3-bar-item w3-white w3-button ">Question about Process Improvement? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-wide w3-white w3-margin-bottom serviceElement">
@@ -55,7 +54,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<p class="w3-opacity">From idea to fruition, we build every step along the way, developing what you knew you needed and what you didn't know you needed.</p>
 			<br>
 		</br>
-	<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Custom Software? Contact Us</a>
 </div>
 </div>
 <div class="w3-container w3-third w3-wide w3-white w3-margin-bottom serviceElement">
@@ -65,7 +63,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<p class="w3-opacity">From collecting data to visualization, we can unearth unimaginable insights that will lead to better decision making and more efficient business strategies.
 			</p>
 			<br></br>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Data Handling? Contact Us</a>
 		</div>
 	</div>
 <div class="w3-white">
@@ -77,7 +74,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<p><b>Logistics and Supply Chain</b></p>
 			<p class="w3-opacity">Customer fulfillment, shipping, distributors, and suppliers can all be difficult to deal with. We can help get you better prices and be more efficient by handling any aspects of supply chain or logistics within your business.
 			</p>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Logistics and Supply Chain? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-white w3-wide w3-margin-bottom serviceElement">
@@ -87,7 +83,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<p class="w3-opacity">From turning your hard copies to digital, to organizing and streamlining your document and communication flow, we can help a variety of different ways.
 			</p>
 			<br></br>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Document Management? Contact Us</a>
 		</div>
 	</div>
 	<div class="w3-container w3-third w3-white w3-wide w3-margin-bottom serviceElement">
@@ -96,7 +91,6 @@ body {font-family: "Trebuchet MS", sans-serif}
 			<p><b>More Services Coming!</b></p>
 			<p class="w3-opacity">We at RGB Consulting Group pride ourselves in the idea of growth. We are always adding new services to our consulting repertoire, so if you have a suggestion or need, less us know (we may be already working on it)!
 			</p>
-			<a href="#contact" class="button" class="w3-bar-item w3-black w3-button w3-padding-small">Question about Future Services? Contact Us</a>
 		</div>
 	</div>
      <!--
@@ -131,21 +125,7 @@ body {font-family: "Trebuchet MS", sans-serif}
               </div>
           </div>
       </div>
-      <div class="w3-container w3-content w3-padding-64" style="max-width:1200px" id="contact">
-      	<h2 class="w3-wide w3-margin-left">Contact</h2>
-      	<p class="w3-opacity w3-margin-left"><i>Inquiry About Our Services? Definitely reach out.</i></p>
-      	<div class ="margin center">
-      		<div class="w3-row w3-padding-32">
-      			<div class="w3-col m6 w3-large w3-margin-bottom">
-      				<i class="fa fa-map-marker" style="width:30px"></i> Boston, US<br>
-      				<i class="fa fa-map-marker" style="width:30px"></i>
-      				San Jose, CR<br>
-      				<i class="fa fa-phone" style="width:30px"></i> Phone: +1 617-470-7125<br>
-      				<i class="fa fa-envelope" style="width:30px"> </i> For North American Inquiries Email: jboyarsky@rgbconsultinggroup.com<br>
-      				<i class="fa fa-envelope" style="width:30px"> </i> For Latin American Inquiries Email: <br>rrojas@rgbconsultinggroup.com<br>
-      			</div> 
-
-
+      <div class style
 
   <!--   </div>
    <!--  <div class="mySlides w3-display-container w3-center">
@@ -165,7 +145,7 @@ body {font-family: "Trebuchet MS", sans-serif}
 
     <!-- The Band Section -->
 
-
+<a href="./contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Contact</a>
 </style>
 </script>
 
