--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Home</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
-							<li role="presentation"><a href="services.html" class="active">Services</a></li>
+							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="gallery.html">Gallery</a></li>
-							<li role="presentation"><a href="contact.html">Contact</a></li>						
+							<li role="presentation"><a href="contact.html" class="active">Contact</a></li>						
 						</ul>
 					</div>
 				</div>		
@@ -50,57 +50,56 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	
-	<div class="services">
-		<div class="container">
-			<div class="text-center">
-				<h2>consectetur adipisicing elit</h2>			
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-heart-o"></i>
-					<h3>Fully Responsive</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<i class="fa fa-cloud"></i>
-					<h3>Retina Ready</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-book"></i>	
-					<h3>Fresh and Clean</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-gear"></i>	
-					<h3>Easy to Customize</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-			</div>
-		</div>
-		<div class="text-center">
-			<div class="container">			
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-heart-o"></i>
-					<h3>Fully Responsive</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<i class="fa fa-cloud"></i>
-					<h3>Retina Ready</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-book"></i>	
-					<h3>Fresh and Clean</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-gear"></i>	
-					<h3>Easy to Customize</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
-				</div>
-			</div>
-		</div>
-	</div>	
+	<div class="map">
+		<iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
+		</iframe>
+	</div>
+	
+	<section class="contact-page">
+        <div class="container">
+            <div class="text-center">        
+                <h2>Drop Your Message</h2>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div> 
+            <div class="row contact-wrap"> 
+                <div class="status alert alert-success" style="display: none"></div>
+                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php">
+                    <div class="col-sm-5 col-sm-offset-1">
+                        <div class="form-group">
+                            <label>Name *</label>
+                            <input type="text" name="name" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Email *</label>
+                            <input type="email" name="email" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Phone</label>
+                            <input type="number" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label>Company Name</label>
+                            <input type="text" class="form-control">
+                        </div>                        
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="form-group">
+                            <label>Subject *</label>
+                            <input type="text" name="subject" class="form-control" required="required">
+                        </div>
+                        <div class="form-group">
+                            <label>Message *</label>
+                            <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
+                        </div>                        
+                        <div class="form-group">
+                            <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Submit message</button>
+                        </div>
+                    </div>
+                </form> 
+            </div><!--/.row-->
+        </div><!--/.container-->
+    </section><!--/#contact-page-->
+	
 	
 	<footer>
 		<div class="container">
