--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Day - HTML Bootstrap Template</title>
+    <title>RGB Consulting Group</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,14 +32,14 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>Day</h1></a>
+						<a href="index.html"><h1>RGB Consulting Group</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html" class="active">Home</a></li>
-							<li role="presentation"><a href="about.html">About Us</a></li>
+							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="gallery.html">Gallery</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
@@ -51,7 +51,7 @@
     </header><!--/header-->	
 	
 	<div class="slider">		
-		<div id="about-slider">
+		<div id="mission-slider">
 			<div id="carousel-slider" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators visible-xs">
@@ -86,47 +86,32 @@
 				    </div>
 			
 				    <div class="item">
-						<img src="img/2.jpg" class="img-responsive" alt=""> 
+						<img src="data_management.jpg" class="img-responsive" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.0s">								
-								<h2>Fully Responsive</h2>
+								<h2>Data Management</h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
 								</div>
 							</div>
-							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.6s">								
-								<form class="form-inline">
-									<div class="form-group">
-										<button type="livedemo" name="purchase" class="btn btn-primary btn-lg" required="required">Live Demo</button>
-									</div>
-									<div class="form-group">
-										<button type="getnow" name="subscribe" class="btn btn-primary btn-lg" required="required">Get Now</button>
-									</div>
-								</form>
 							</div>
 						</div>
 				    </div> 
 				    <div class="item">
-						<img src="img/2.jpg" class="img-responsive" alt=""> 
+						<img src="roundtableart.jpg" class="img-responsive" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
-								<h2>Modern Design</h2>
+								<h2>Modern Approaches</h2>
 							</div>
 							<div class="col-md-10 col-md-offset-1">
 								<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+									<p>Consulting services that make a difference.</p>
 								</div>
 							</div>
-							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">								
-								<form class="form-inline">
-									<div class="form-group">
-										<button type="livedemo" name="purchase" class="btn btn-primary btn-lg" required="required">Live Demo</button>
-									</div>
-									<div class="form-group">
-										<button type="getnow" name="subscribe" class="btn btn-primary btn-lg" required="required">Get Now</button>
-									</div>
+							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">	
+										
 								</form>
 							</div>
 						</div>
@@ -144,7 +129,7 @@
 		</div><!--/#about-slider-->
 	</div><!--/#slider-->
 	
-	<div class="about">
+	<div class="mission">
 		<div class="container">
 			<div class="text-center">
 				<h2>Quaerat quod voluptate consequuntur </h2>
