--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Day - HTML Bootstrap Template</title>
+    <title>RGB Consulting Group</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,16 +32,16 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>Day</h1></a>
+						<a href="index.html"><h1>RGB Consulting Group</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html">Home</a></li>
-							<li role="presentation"><a href="about.html" class="active">About Us</a></li>
+							<li role="presentation"><a href="index.html" class="active">Home</a></li>
+							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
-							<li role="presentation"><a href="gallery.html">Gallery</a></li>
+							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
@@ -53,19 +53,12 @@
 	<div class="about">
 		<div class="container">
 			<div class="text-center">
-				<h2>Quaerat quod voluptate consequuntur </h2>
+				<h2>Modern Tech Approaches</h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat quod voluptate consequuntur ad quasi, 
-					dolores obcaecati ex aliquid, dolor provident accusamus omnis dolorum ipsam. Voluptatem ipsum expedita, corporis facilis laborum asperiores nostrum! 
-					Amet porro numquam ratione temporibus quia dolorem sint lorem voluptates quasi mollitia.</p>
+					<p>Using cutting edge technology and innovative methods, we find ways to modernize and improve your business in a variety of different ways.</p>
 				</div>
 		
-				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="btn-gamp"><a href="#">Learn More</a></div>
-				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="gamp-btn"><a href="#">download</a></div>
-				</div>
+				
 				
 			</div>	
 		</div>			
