--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<li role="presentation"><a href="index.html" class="active">Home</a></li>
 							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
-							<li role="presentation"><a href="gallery.html">About Us</a></li>
+							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
