--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,14 @@
     </header><!--/header-->	
 	
 	<div class="map">
-		<iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Kuningan,+Jakarta+Capital+Region,+Indonesia&amp;aq=3&amp;oq=kuningan+&amp;sll=37.0625,-95.677068&amp;sspn=37.410045,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Kuningan&amp;t=m&amp;z=14&amp;ll=-6.238824,106.830177&amp;output=embed">
-		</iframe>
+		<div class= 
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d151730.52936162657!2d-84.10857724137857!3d9.932839053459078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e342c50d15c5%3A0xe6746a6a9f11b882!2sSan+Jos%C3%A9+Province%2C+San+Jos%C3%A9%2C+Costa+Rica!5e0!3m2!1sen!2sus!4v1529547780677" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 	
 	<section class="contact-page">
         <div class="container">
             <div class="text-center">        
                 <h2>Drop Your Message</h2>
-                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
