--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html" class="active">Home</a></li>
-							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
+							<li role="presentation"><a href="#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
@@ -50,7 +50,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="container"
+		<div class="container">
 	<img src="roundtableart1.jpg">
 	</div>
 
@@ -136,11 +136,9 @@
 	<div class="mission">
 		<div class="container">
 			<div class="text-center">
-				<h2>Quaerat quod voluptate consequuntur </h2>
+				<h2>Mission Statement </h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat quod voluptate consequuntur ad quasi, 
-					dolores obcaecati ex aliquid, dolor provident accusamus omnis dolorum ipsam. Voluptatem ipsum expedita, corporis facilis laborum asperiores nostrum! 
-					Amet porro numquam ratione temporibus quia dolorem sint lorem voluptates quasi mollitia.</p>
+					<p>Our mission is to provide our clients with innovative, insightful, and impactful services to address business needs. With integrity and efficiency at the forefront of our priorities, we promise to deliver a solution that makes a difference.</p>
 				</div>
 		
 				<div class="col-md-6 col-sm-6 col-xs-6">
